infrastructure/kubernetes/staging/peer-review-workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peer-review-workers-deployment
  labels: 
    application: peer-review
    function: workers 
    environment: staging
spec:
  selector:
    matchLabels:
      application: peer-review
      function: workers 
      environment: staging
  replicas: 1
  template: 
    metadata:
      name: peer-review-workers-pod-template
      labels:
        application: peer-review
        function: workers 
        environment: staging
        container: peerreview
    spec:
      terminationGracePeriodSeconds: 600 
      containers:
        - name: peer-review-workers-container
          image: ghcr.io/danielbingham/peerreview-worker:0.1.0
          resources:
            requests:
              cpu: 100m
