infrastructure/kubernetes/staging/peer-review.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peer-review-app-deployment
  labels: 
    application: peer-review
    function: frontend-api 
    environment: staging
spec:
  selector:
    matchLabels:
      application: peer-review
      function: frontend-api 
      environment: staging
  replicas: 2
  template: 
    metadata:
      name: peer-review-app-pod-template
      labels:
        application: peer-review
        function: frontend-api 
        environment: staging
        container: peerreview
    spec:
      containers:
        - name: peer-review-app-container
          image: ghcr.io/danielbingham/peerreview:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 3 
            failureThreshold: 20
---
apiVersion: v1
kind: Service
metadata:
  name: peer-review-app-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:843012963492:certificate/9bb78fe6-f9d9-4dcc-9193-e7bc7cd7590d
spec:
  type: NodePort 
  selector:
    application: peer-review
    function: frontend-api
    environment: staging
  ports:
    - name: http
      protocol: TCP
      port: 80 
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443 
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peer-review-app-ingress 
  labels:
    application: peer-review
    function: frontend-api
    environment: staging
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: peer-review-staging-ingress 
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:843012963492:certificate/9bb78fe6-f9d9-4dcc-9193-e7bc7cd7590d" 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: staging.peer-review.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: peer-review-app-service
            port: 
              number: 80
